[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webclaw"
version = "0.1.0"
description = "Python SDK for the Webclaw web extraction API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "webclaw" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://webclaw.io"
Documentation = "https://webclaw.io/docs"
Repository = "https://github.com/0xMassi/webclaw-python"
Issues = "https://github.com/0xMassi/webclaw-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
